# kaggle-genai-intensive-course

./: .gitignore  LICENSE  README.md  pyproject.toml
capstone-2025q1/: Online-Grocery-Store-Chatbot.ipynb  README.md  data-generation.py  data-to-sql.py  online-grocery-store-chatbot.ipynb
capstone-2025q1/chatbot/: configs.py  data_loader.py  graph.py  llm.py  main.py  state.py  tools.py
capstone-2025q1/data/: data_20250418.db  ingredients_20250418.json  recipes_20250418.json  sample_data.csv  한식메뉴+외국어표기+길라잡이+800선(최종본).xlsx
day-1/: README.md  day-1-evaluation-and-structured-output.ipynb  day-1-prompting.ipynb
day-2/: README.md  day-2-classifying-embeddings-with-keras.ipynb  day-2-document-q-a-with-rag.ipynb  day-2-embeddings-and-similarity-scores.ipynb
day-3/: README.md  day-3-building-an-agent-with-langgraph.ipynb  day-3-function-calling-with-the-gemini-api.ipynb
day-4/: README.md  day-4-fine-tuning-a-custom-model.ipynb  day-4-google-search-grounding.ipynb
day-5/: README.md
