[project]
name = "kaggle-genai-intensive-course"
version = "0.1.0"
description = "[Kaggle] 5-Day Gen AI Intensive Course with Google"
authors = [
    {name = "geminii01",email = "jjaemni159@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "agent-starter-pack (>=0.2.3,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-core (>=0.3.54,<0.4.0)",
    "langchain-google-genai (>=2.1.3,<3.0.0)",
    "langgraph (>=0.3.30,<0.4.0)",
    "google-genai (>=1.11.0,<2.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.4.0"

